[package]
name = "testcontainers-modules"
version = "0.1.0"
edition = "2021"
authors = ["Oleksii Karpenko <alexkarpenko@yahoo.com>"]
description = "Imlementation of some useful testcontainers images"
rust-version = "1.77.2"
homepage = "https://github.com/alex-karpenko/testcontainwers-modules"
keywords = ["containers", "kube", "git", "tokio"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/alex-karpenko/testcontainers-modules"
exclude = [
    ".github/**",
    ".vscode/**",
    "TODO.md",
    "Cargo.lock",
    "target/**",
    ".gitignore",
    "mutants.*/**",
]

[features]
default = ["destructor"]
k3s = ["dep:testcontainers", "dep:kube", "dep:rustls", "dep:tempfile", "dep:tokio"]
gitea = ["dep:testcontainers"]
destructor = ["dep:ctor", "dep:tokio"]

[dependencies]
ctor = { version = "0.2", optional = true }
kube = { version = "0.96.0", features = ["kube-client"], optional = true }
rustls = { version = "0.23", default-features = false, features = [
    "aws-lc-rs",
    "std",
    "tls12",
], optional = true }
tempfile = { version = "3", optional = true }
testcontainers = { version = "0.23.1", optional = true }
thiserror = "1.0"
tokio = { version = "1.38.0", default-features = false, features = ["rt", "sync", "fs", "macros"], optional = true }
